[package]

name = "cubes"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[[bin]]
name = "cubes"
path = "main.rs"

[dependencies.snowmew-core]
path = "../../src/snowmew-core"

[dependencies.snowmew-render-mux]
path = "../../src/snowmew-render-mux"

[dependencies.snowmew-position]
path = "../../src/snowmew-position"

[dependencies.snowmew-graphics]
path = "../../src/snowmew-graphics"

[dependencies.render-data]
path = "../../src/render-data"
