[package]
name = "snowmew-core"
version = "0.0.1"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]
license="Apache 2"
homepage="https://github.com/csherratt/snowmew"
description="The core of the Snowmew engine"

[lib]
name = "snowmew-core"
path = "lib.rs"

[dependencies]
rustc-serialize="*"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.ovr]
git = "https://github.com/csherratt/vr-rs.git"

[dependencies.collect]
git = "https://github.com/csherratt/collect-rs"
branch = "cow_trie"
