[package]
name = "snowmew-core"
version = "0.0.1"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]
license="Apache 2"
homepage="https://github.com/csherratt/snowmew"
description="The core of the Snowmew engine"

[lib]
name = "snowmew-core"
path = "lib.rs"

[dependencies]
rustc-serialize="*"
collect="*"
cow="*"