[package]

name = "snowmew-graphics"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-graphics"
path = "lib.rs"

[dependencies.collision]
git = "https://github.com/csherratt/collision-rs.git"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies]
genmesh = "*"
rustc-serialize="*"

