[package]

name = "snowmew-graphics"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-graphics"
path = "lib.rs"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies]
genmesh = "*"
rustc-serialize="*"
cgmath="*"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs.git"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros.git"
