[package]

name = "snowmew-loader"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-loader"
path = "lib.rs"

[dependencies]
obj = "~0.0.1"
genmesh = "*"

[dependencies.stb_image]
git = "https://github.com/csherratt/rust-stb-image.git"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies.snowmew-graphics]
path = "../snowmew-graphics"