[package]

name = "snowmew-physics"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[[lib]]
name = "snowmew-physics"
path = "lib.rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.cow]
git = "https://github.com/csherratt/cow-rs.git"

[dependencies.collision]
git = "https://github.com/csherratt/collision-rs.git"

[dependencies.snowmew-core]
path = "../snowmew-core"

[dependencies.snowmew-graphics]
path = "../snowmew-graphics"

[dependencies.snowmew-position]
path = "../snowmew-position"
