[package]

name = "snowmew-position"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-position"
path = "lib.rs"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.collect]
git = "https://github.com/csherratt/collect-rs"
branch = "cow_trie"

[dependencies]
rustc-serialize="*"

[features]
use_opencl = ["opencl"]

[dependencies.opencl]
git = "https://github.com/luqmana/rust-opencl.git"
optional = true