[package]

name = "snowmew-position"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-position"
path = "lib.rs"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies]
cow="*"
collect="*"
rustc-serialize="*"
cgmath="*"

[features]
use_opencl = ["opencl"]

[dependencies.opencl]
git = "https://github.com/luqmana/rust-opencl.git"
optional = true