[package]

name = "snowmew-render-gfx"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-render-gfx"
path = "lib.rs"

[dependencies.collision]
git = "https://github.com/csherratt/collision-rs.git"

[dependencies.stb_image]
git = "https://github.com/csherratt/rust-stb-image.git"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.device]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.opencl]
git = "https://github.com/csherratt/rust-opencl.git"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies]
genmesh = "*"
time = "*"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies.snowmew-position]
path = "../snowmew-position/"

[dependencies.snowmew-graphics]
path = "../snowmew-graphics/"

[dependencies.snowmew-render]
path = "../snowmew-render/"

