[package]

name = "snowmew-render-gfx"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-render-gfx"
path = "lib.rs"

[dependencies.collision]
git = "https://github.com/csherratt/collision-rs.git"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.collect]
git = "https://github.com/csherratt/collect-rs"
branch = "cow_trie"
features = ["cow_trie_map", "trie_map", "ordered_iter"]
default-features = false

[dependencies]
genmesh = "*"
time = "*"
glfw = "*"
gfx = "*"
gfx_macros = "*"
gfx_device_gl = "*"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies.snowmew-position]
path = "../snowmew-position/"

[dependencies.snowmew-graphics]
path = "../snowmew-graphics/"

[dependencies.snowmew-render]
path = "../snowmew-render/"

[dependencies.snowmew-input]
path = "../snowmew-input/"

[features]
use_opencl=["opencl", "snowmew-render/use_opencl"]

[dependencies.opencl]
git = "https://github.com/luqmana/rust-opencl.git"
optional = true