[package]

name = "snowmew-render-gfx"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-render-gfx"
path = "lib.rs"

#[dependencies.collision]
#git = "https://github.com/csherratt/collision-rs.git"

[dependencies]
cgmath="*"
cow="*"
collect="*"
genmesh = "*"
time = "*"
glfw = "*"

[dependencies.snowmew-core]
path = "../snowmew-core/"

[dependencies.snowmew-position]
path = "../snowmew-position/"

[dependencies.snowmew-graphics]
path = "../snowmew-graphics/"

[dependencies.snowmew-render]
path = "../snowmew-render/"

[dependencies.snowmew-input]
path = "../snowmew-input/"

[features]
use_opencl=["opencl", "snowmew-render/use_opencl"]

[dependencies.opencl]
git = "https://github.com/luqmana/rust-opencl.git"
optional = true

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs.git"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx-rs.git"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx-rs.git"