[package]

name = "snowmew-render"
version = "0.1.0"
authors = [
    "Colin Sherratt <colin.sherratt@gmail.com>",
]

[lib]
name = "snowmew-render"
path = "lib.rs"

[dependencies.snowmew-core]
path = "../snowmew-core"

[dependencies.snowmew-position]
path = "../snowmew-position"

[dependencies.snowmew-graphics]
path = "../snowmew-graphics"

[dependencies.snowmew-input]
path = "../snowmew-input"

[dependencies]
rustc-serialize="*"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[features]
use_opencl=["opencl"]

[dependencies.opencl]
git = "https://github.com/luqmana/rust-opencl.git"
optional = true